log
Sat, May  3, 2025  7:23:52 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Sat, May  3, 2025  7:25:46 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
0730c9d
Sat, May  3, 2025  7:26:59 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
5cd52d3
Sat, May  3, 2025  7:46:03 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|6
total_score: 15/70
df42972
